--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500;700&display=swap" rel="stylesheet" />
 
+    <meta name="mobile-web-app-capable" content="yes">
+
     <title>Dawid Szemborowski</title>
   </head>
   <body>
